--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "flureejs-utils",
-  "version": "0.1.1",
+  "version": "0.1.2",
   "description": "Utilities for handling Fluree keys",
   "main": "dist/index.js",
   "types": "./dist/index.d.ts",
@@ -46,10 +46,11 @@
     "bn.js": "^5.1.2",
     "secp256k1": "^4.0.1",
     "keccak256": "^1.0.0",
-    "bs58check": "^2.1.2",
     "is-hex-prefixed": "^1.0.0",
     "create-hash":"^1.2.0",
-    "strip-hex-prefix": "^1.0.0"
+    "strip-hex-prefix": "^1.0.0",
+    "@fluree/crypto-base":"^0.1.6",
+    "bs58check": "^2.1.2"
   },
   "devDependencies": {
     "@ethereumjs/config-nyc": "^1.1.1",
