--- a/package.json
+++ b/package.json
@@ -44,9 +44,9 @@
     "@types/bn.js": "^4.11.3",
     "bn.js": "^5.1.2",
     "secp256k1": "^4.0.1",
-    "keccak256": "^1.0.0",
+    "keccak":"^3.0.1",
     "is-hex-prefixed": "^1.0.0",
-    "create-hash":"^1.2.0",
+
     "strip-hex-prefix": "^1.0.0",
     "@fluree/crypto-base":"^0.1.6",
     "bs58check": "^2.1.2"
@@ -57,7 +57,7 @@
     "@flureejs/config-typescript": "^0.1.6",
     "@flureejs/config-tslint": "^0.1.5",
     "@types/mocha": "^5.2.7",
-    "@types/node": "^12.0.10",
+    "@types/node": "^14.9.0",
     "husky": "^2.1.0",
     "karma": "^5.0.2",
     "karma-chrome-launcher": "^2.0.0",
